update image src

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 			<div class="content content--canvas">
 				<div class="header">
 					<h1 class="header__title">MEGAN RAE BYERS</h1>
-					<img class="desk" src="../rae_portfolio/src/images/desk.svg">
+					<img class="desk" src="../rae_portfolio/src/desk.svg">
 					
 				</div>
 				<div class="heading">
