add more desktop elements

--- a/index.html
+++ b/index.html
@@ -45,9 +45,9 @@
 					</div>
 					
 					<img class="desktop" src="../Rae_Portfolio/src/desktop.svg">
-					<img class="page1" src="../Rae_Portfolio/src/logoFinder2.svg">
-					<img class="page1Logos" src="../Rae_Portfolio/src/work/boulderBaja.svg">
-					<h6 class="text">click here for more </h6>
+					<img class="page1" src="../Rae_Portfolio/src/logoFinder.svg">
+					<a href="logos.html"><img class="Notif" src="../Rae_Portfolio/src/logoNotif.svg"></a>
+					
 
 					<img class="downArrow bounce"width="40" height="40" alt="developed by Codeconvey.com" src="../Rae_Portfolio/src/arrow.svg" />
 				</div>
