add megansChalkboard font

--- a/index.html
+++ b/index.html
@@ -32,7 +32,9 @@
 			<div class="content content--canvas">
 				
 				<div class="header">
-					
+						<div class="progress-container">
+								<div class="progress-bar" id="myBar"></div>
+							  </div> 
 					<!-- <h1 class="header__title">Megan Rae Byers</h1> -->
 					<div class = "logo">
 							<img src ="src/design_elixir.svg">
