--- a/index.html
+++ b/index.html
@@ -34,10 +34,21 @@
 				<div class="header">
 						<div class="progress-container">
 								<div class="progress-bar" id="myBar"></div>
-							  </div> 
+						</div> 
 					<!-- <h1 class="header__title">Megan Rae Byers</h1> -->
 					<div class = "logo">
 							<img src ="src/design_elixir.svg">
+					</div>
+
+					<img class="black" src="src/square.svg">
+					<img class="stars" src="src/stars.svg">
+
+					<div class="social">
+						<a href="https://www.behance.net/colouradical" target="_blank"><img class="socialIcons" src="src/icons/behance.svg"></a>
+						<a href="https://www.instagram.com/meganbyers.jpeg/" target="_blank"><img class="socialIcons" src="src/icons/instagram.svg"></a>
+						<a href="https://www.linkedin.com/in/meganraebyers/" target="_blank"><img class="socialIcons" src="src/icons/linked.svg"></a>
+						<a href="https://github.com/coloradical" target="_blank"><img class="socialIcons" src="src/icons/github.svg"></a>
+						
 					</div>
 
 					<img class="desk" src="src/desk2.svg">
