--- a/index.html
+++ b/index.html
@@ -67,6 +67,7 @@
 				<img class="spinny" src="src/spinny.svg">
 
 				<img class="on" src="src/on.svg">
+				<img class="wallpaper" src="src/wallpaper.svg">
 
 				<!-- Top Navigation Tool Bar -->
 				<div class="toolbar">
@@ -125,7 +126,7 @@
 									<h4>Skills</h4>
 									<ul>
 										<li>
-											<h4>Code &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&#8227;</h4>
+											<h4>Code&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&#8227;</h4>
 											<ul>
 												<li><h4>HTML5</h4></li>
 												<li><h4>CSS</h4</li> 
@@ -140,7 +141,7 @@
 											</ul>
 										</li>
 										<li>
-											<h4>Design&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&#8227;</h4>
+											<h4>Design&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&#8227;</h4>
 											<ul>
 												<li><h4>Photoshop</h4></li>
 												<li><h4>Illustrator</h4</li> 
@@ -226,11 +227,30 @@
 						</nav>
 						<nav>
 							<h4 class="toolRight" id="time">time</h4>
-							<img class="toolRight" id="toolIcons" style="width: 60px; padding-top: 32px;"src="src/toolbarIcons.svg">
+							<h4 class="toolRight" id="updatedProgress">progress</h4>
+							<h4 class="toolRight" id="updatedProgress">p</h4>
+							<img class="toolRight" id="toolIcons" style="width: 60px; padding-top: 34px;"src="src/toolIcons.svg">
 						</nav>
 				</div>
 
-				
+				<div class="dock">
+					<a></a>
+					<img class="dockIcons dockBounce" src="src/dockIcons/finder.svg">
+					<img class="dockIcons" src="src/dockIcons/messages.svg">
+					<img class="dockIcons dockBounce" src="src/dockIcons/mail.svg">
+					<img class="dockIcons" src="src/dockIcons/music.svg">
+					<img class="dockIcons" src="src/dockIcons/stickies.svg">
+					<img class="dockIcons" src="src/dockIcons/photoshop.svg">
+					<img class="dockIcons" src="src/dockIcons/illustrator.svg">
+					<img class="dockIcons" src="src/dockIcons/indesign.svg">
+					<img class="dockIcons" src="src/dockIcons/premier.svg">
+					<img class="dockIcons" src="src/dockIcons/terminal.svg">
+				</div>
+
+				<div class="pages">
+
+				</div>
+
 				<img class="downArrow bounce" width="40" height="40" alt="developed by Codeconvey.com"
 					src="src/arrow.svg" />
 			</div>
