--- a/index.html
+++ b/index.html
@@ -57,12 +57,11 @@
 							src="src/icons/linked.svg"></a>
 					<a href="https://github.com/coloradical" target="_blank"><img class="socialIcons"
 							src="src/icons/github.svg"></a>
-
 				</div>
 
-				<img class="desk" src="src/desk_v7.svg">
+				<img class="desk" src="src/desk7.svg">
 				<!-- <img class="calendar" src="src/calendar.svg"> -->
-				<img class="doorway" src="src/doorway2.svg">
+				<img class="doorway" src="src/doorway6.svg">
 
 				<img class="spinny" src="src/spinny.svg">
 
