--- a/webglTranslation/index1.html
+++ b/webglTranslation/index1.html
@@ -28,6 +28,20 @@
                     <img class="logo" src="../src/design_elixir.svg">
                   </div>
                   
+                  <div id="spinnyBox"> <img class="spinny" src="../pngSRC/spinny.svg"> </div>
+                  <img class="wallpaper" src="../src/wallpaper.svg">
+                  <div id="profileBox">
+                  <img class="profile" src="../src/portrait2.svg">
+                  </div>
+
+
+
+
+                </div>
+
+                <div>
+                    <h1>Meet Design Elixir, the concoction of all types of media by Megan Byers.</h1>
+
                 </div>
 
             
