--- a/desktopScratchv2.html
+++ b/desktopScratchv2.html
@@ -1,106 +1,49 @@
 <style>
-.desktop {
-	background-image: url("src/wallpaper.svg");
-	background-size: cover;
-	background-color: #494f7a;
-	width: 100%;
-    height: 100%;
-    
-
-}
-
-h1 {
-  font-family: 'Poppins', sans-serif, bold;
-  font-size: 36px;
-  line-height: 36px;
-}
-
-h2 {
-    font-family: 'Poppins', sans-serif, normal;
-    font-size: 24px;
-    line-height: 24px;
-}
-
-hr {background-color: #2c2c2c;}
-
-h3 {
-    font-family: 'Poppins', sans-serif, normal;
-    font-size: 18px;
-    font-weight: 400;
-}
-/* quotations */
-h5 {
-    font-family: 'Poppins', sans-serif, thin;
-    font-size: 12px;
-    font-weight: 300;
-    padding-left: 10px; 
-    padding-right: 10px;
-}
+.desktop {background-image: url("src/wallpaper.svg"); background-size: cover; background-color: #494f7a; width: 100%; height: 100%;}
 
 
-p {
-  font-family: 'Poppins', sans-serif, normal;
-  font-size: 14px;
-  line-height: 16px;
-}
+h1 {font-family: 'Poppins', sans-serif, bold; font-size: 36px; line-height: 36px;}
+h2 {font-family: 'Poppins', sans-serif, normal; font-size: 24px; line-height: 24px;}
+h3 {font-family: 'Poppins', sans-serif, normal; font-size: 18px; font-weight: 400;}
+h5 {font-family: 'Poppins', sans-serif, thin; font-size: 12px; font-weight: 300; padding-left: 10px; padding-right: 10px;}
+h6 {font-family: 'Poppins', sans-serif, normal; font-weight: 300; font-size: 12px; line-height: 12px}
+p {font-family: 'Poppins', sans-serif, normal; font-size: 14px; line-height: 16px;}
 
-h6 {
-    font-family: 'Poppins', sans-serif, normal ;
-    font-weight: 300;
-    font-size: 12px;
-    line-height: 12px
-}
-
-em {
-  font-family: 'Poppins', sans-serif, italic;
-
-}
-
-b {
-  font-family: 'Poppins', sans-serif, 400;
-}
-
-a {
-    color: white; 
-    text-decoration: none;
-}
+em {font-family: 'Poppins', sans-serif, italic;}
+b {font-family: 'Poppins', sans-serif, 400;}
+a {color: white; text-decoration: none;}
 a:hover {color: #9aa4bd;}
 
-.desktopToolbar {
-    width: 100%; 
-    background: #2c2c2c; 
-    height: 50px; 
-    top: 0; 
-    color: #f4f4f4; 
-}
+.desktopToolbar {width: 100%; background: #2c2c2c; height: 50px; top: 0; color: #f4f4f4;}
 
-.dock_container {
-	display: flex;
-	justify-content: center;
-	align-items: center;
-	z-index: 1600;
-}
+.dock_container {display: flex; justify-content: center; align-items: center; z-index: 100;}
 
-.dock {
-	bottom: 0;
-	height: 100px;
-	background-color: #2e345b;
-	position: fixed;
-	z-index: 2000;
-}
-
-
-.dockIcons {
-	height: 70px;
-	padding: 15px;
-	opacity: 1;
-}
-
-.dockIcons:hover {
-cursor: pointer;
-}
+.dock {bottom: 0; height: 100px; background-color: #2e345b; position: fixed; z-index: 200;}
+.dock img {height: 70px; padding: 15px; opacity: 1;}
+.dock img:hover {transform: rotate(5deg);}
 
 .tooltip {position: relative; display: inline-block;}
+.tooltip .tooltiptext {
+  visibility: hidden;
+  width: 120px;
+  background-color: #c7ccde;
+  color: #000;
+  text-align: center;
+  padding: 5px 0;
+  border-radius: 6px;
+  position: absolute;
+  z-index: 1;
+  bottom: 125%;
+  left: 50%;
+  margin-left: -60px;
+  opacity: 0;
+  transition: opacity 0.3s;
+}
+
+.tooltip .tooltiptext::after {content: ""; position: absolute; top: 100%; left: 50%;}
+.tooltip:hover .tooltiptext {visibility: visible; opacity: 1;}
+
+
 /* for large screens */
 @media all and (min-width: 800px) { 
     #about_window_content > *{ flex: 1 auto;}  /* We tell both sidebars to share a row */
@@ -110,33 +53,6 @@ cursor: pointer;
 @keyframes typing {from { width: 0;}to {width: 100%;}}
 @-webkit-keyframes slide-in-fwd-center{0%{-webkit-transform:translateZ(-1400px);transform:translateZ(-1400px);opacity:0}100%{-webkit-transform:translateZ(0);transform:translateZ(0);opacity:1}}@keyframes slide-in-fwd-center{0%{-webkit-transform:translateZ(-1400px);transform:translateZ(-1400px);opacity:0}100%{-webkit-transform:translateZ(0);transform:translateZ(0);opacity:1}}
 
-
-/* Tooltip text */
-.tooltip .tooltiptext {
-  visibility: hidden;
-  width: 120px;
-  background-color: #c7ccde;
-  color: #000;
-  text-align: center;
-  padding: 5px 0;
-  border-radius: 6px;
-
-  /* Position the tooltip text */
-  position: absolute;
-  z-index: 1;
-  bottom: 125%;
-  left: 50%;
-  margin-left: -60px;
-
-  /* Fade in tooltip */
-  opacity: 0;
-  transition: opacity 0.3s;
-}
-
-/* Tooltip arrow */
-.tooltip .tooltiptext::after {content: ""; position: absolute; top: 100%; left: 50%;}
-
-.tooltip:hover .tooltiptext {visibility: visible; opacity: 1;}
 
 button {background-color: #00000000; border: none;}
 button:hover {cursor: pointer;}
@@ -149,16 +65,17 @@ button:hover {cursor: pointer;}
 .desktop_toolbar button {color: white; font-size: 14px; } 
 .desktop_toolbar a {color: white;}
 
-.window {background-color: #9aa4bd; top: 10%; left: 5%; position: absolute; border:  #3A4172 1px solid; border-radius: 4px 4px 4px 4px; }
-.window_closebar {height: 30px; width: 100%; top: 0; cursor: move; background-color: #49588b; color: #f4f4f4; display: inline-block; border-bottom: #3A4172 1px solid; text-align: center;}
-.window p {padding-left: 5%; padding-right: 5%;}
+.window {background-color: #9aa4bd;  position: absolute; border:  #3A4172 1px solid; border-radius: 4px 4px 4px 4px;  }
+.window_closebar {height: 30px; width: 100%; top: 0; cursor: move; background-color: #49588b; color: #f4f4f4; display: inline-block; border-bottom: #3A4172 1px solid; text-align: center; position: sticky; z-index: 20;}
+/* .window p {padding-left: 5%; padding-right: 5%;} */
 .window_closebar p {display: inline-block;  position: relative;bottom: 8px;}
 .close_btn {top: 5px; height: 20px; left: 10px; float: left; position: absolute;}
 
-#about_window_content {height: 550px; width: 85vw; display:flex; flex-flow: row wrap; max-width: 800px; }
+#about_window {top: 15%; left: 20%;}
+#about_window_content {height: 550px; width: 85vw; display:flex; flex-flow: row wrap; max-width: 800px; contain: content; }
 #about_window_content > * {flex: 1 100%;} /* for the wrapping of the flexbox, built for mobile first  */
 #about_window_content_col1 { width: 30%; background: #3A4172;  order:1;  padding-top: 20px; color: white; }
-#about_window_content_col2 { width: 70%; height: 550px;order:2; position: relative; overflow: scroll; overflow-x: hidden;}
+#about_window_content_col2 { width: 70%; height: 550px;order:2;  overflow: scroll; overflow-x: hidden;}
 .about_links { vertical-align: middle; display: inline; }
 .about_links:hover {color: #9aa4bd;}
 .about_links img {height: 24px; padding-left: 20px; padding-right: 10px; vertical-align: middle; } 
@@ -170,46 +87,50 @@ button:hover {cursor: pointer;}
 #about_window_content_col2 >* {padding-left: 30px;}
 .about_window_mission {margin: 20px; padding: 20px;background: #f4f4f4;height: 85%; width: 85%; }
 
+#contact_window {top: 10%; left: 50%;}
 #contact_window_content {top: 40%;height: 550px; width: 400px; }
+#contact_window_content p {padding-left: 5%; padding-right: 5%;}
 #contact_window_sendbar button {bottom: 20px; position: absolute; background: #49588b; width: 100px; height: 30px; float: right; right: 20px;}
-#contact_window_content img {height: 80px; padding-left: 20px; animation: slide-in-right 1s cubic-bezier(.25,.46,.45,.94) none; }
+#contact_window_content img {height: 80px; padding-left: 20px; }
+#contact_window_content img:hover {transform: rotate(5deg); cursor: pointer;}
 
-#notification {right: 0px; z-index: 20; width: 500px; padding-top: 50px; position: fixed; display: none; animation: slide-in-fwd-center .4s cubic-bezier(.25,.46,.45,.94) both;}     
+
+#notification {right: 0px; z-index: 20; width: 500px; top: 53px; position: fixed; display: none; animation: slide-in-fwd-center .4s cubic-bezier(.25,.46,.45,.94) both;}     
 
 #terminal_window {height: 400px; width: 80vw; max-width: 650px; background-color: #3A4172; top: 30%; }
 .done {display: block !important;}
 .terminal {padding-top: 20px;}
-#terminal_text p {display: none; font-family:'Courier New', Courier, monospace; color: white;}
+#terminal_text p {display: none; font-family:'Courier New', Courier, monospace; color: white; padding-left: 2%;}
 .line {white-space: nowrap; overflow: hidden; transform: translateY(-50%); animation: typing 2.5s steps(30, end); display: block !important;}
 
-#finder_window {width: 90%; height: 80%; max-height: 700px; max-width: 90%; }
-#finder_window_col1 {float: left; background: #3A4172; color: white;  width: 250px; height:95%; padding-left: 10px; overflow: scroll; overflow-x: hidden;}
+#finder_window {width: 90%; height: 80%; max-height: 700px; max-width: 90%; contain: content;  }
+#finder_window_col1 {float: left; background: #3A4172; color: white;  width: 250px; height:100%; padding-left: 10px;  overflow: auto;}
 #finder_window_col1 p {color: lightgray;} 
 #finder_window_col1 p:hover {color: white; cursor: pointer;}
 #finder_window_col2 {float: right; width: calc(100% - 260px); }
-
-#finder_window_col2_recents img {height: 90px; padding: 30px;}
+#finder_window_col2 > * {padding-left: 8%;}
+#finder_window_col2_recents img {height: 15%; padding: 5%;}
 #finder_window_col2_recents img:hover {transform: rotate(5deg); }
 
 .hide { display: none;}
 
 .sticky {width: 300px; height: 300px; background: #9aa4bd; position: absolute; z-index: 20; text-align: center;  }
 .sticky h6 {padding-top: 20%; }
-#testimonial_window1 {top: 40%; left: 40%; background-image: url("src/quotes1.svg"); background-size: 100% 80%; background-position: 0% 60%; background-repeat: no-repeat;};
-#testimonial_window2 {top: 45%; left: 45%; background-image: url("src/quotes2.svg"); background-size: 100% 80%; background-position: 0% 60%; background-repeat: no-repeat;}
-#testimonial_window3 {top: 50%; left: 50%; background-image: url("src/quotes3.svg"); background-size: 100% 80%; background-position: 0% 50%; background-repeat: no-repeat;}
+#testimonial_window1 {top: 40%; right: 15%; background-image: url("src/quotes1.svg"); background-size: 100% 80%; background-position: 0% 60%; background-repeat: no-repeat;}
+#testimonial_window2 {top: 45%; right: 10%; background-image: url("src/quotes2.svg"); background-size: 100% 80%; background-position: 0% 60%; background-repeat: no-repeat;}
+#testimonial_window3 {top: 50%; right: 5%; background-image: url("src/quotes3.svg"); background-size: 100% 80%; background-position: 0% 60%; background-repeat: no-repeat;}
 .sticky_textbox h5{display: flex; justify-content: center; align-items: center; padding-top: 10%; } 
 .sticky_textbox button {background: #3A4172; color: white; }
 .sticky_textbox button:hover {background:white; color: #3A4172;}
 
-.case {width: 90%; height: 80%; background-image: url('src/grid+ruler.svg'); background-size: cover; background-repeat: no-repeat;}
-.case_content { padding: 5%; overflow: scroll; overflow-x: hidden;  }
+.case {width: 90%; height: 75%; background-image: url('src/blue_grid.svg'); background-size: cover; background-repeat: no-repeat; overflow: auto;}
+.case_content { contain:content; }
 
 
 .artboard {
   background-color: #e8e8e8; 
   margin-top: 5%;
-  margin-left: 10%;
+  margin-left: 5%;
   margin-right: 3%;
   text-align: left;
   display:flex;
@@ -224,10 +145,10 @@ button:hover {cursor: pointer;}
  
 }
 
-.artboard_left {order:1;  flex-basis:100%; padding-right: 30px;}
+.artboard_left {order:1;  flex-basis:100%; padding-right: 30px; text-align: left;}
 .artboard_right {order:2; flex-basis:100%; padding-top: 10px; }
 .artboard_center {width: 95%; order: 3; }
-.artboard_center p { padding-top: 10px;}
+
 .artboard a {color: black;}
 .artboard a:hover {color: gray;}
 
@@ -239,7 +160,7 @@ button:hover {cursor: pointer;}
   .artboard_center { order: 3;}
 }
 
-.desktop_container img {width: 80px; position: fixed;}
+.desktop_container img {width: 8%; position: fixed;}
 .desktop_container img:hover {transform: rotate(5deg);}
 
 
@@ -253,16 +174,13 @@ button:hover {cursor: pointer;}
 
 <div class="desktop"> 
     <div class="desktop_container">
-        <button onclick="toggleOpenClose('miller_project')"><img class="desktopFileIcons" style="left: 80%; top:15%;" src="src/desktopFiles/millerbrosfile.svg"></button>
-        <button onclick="toggleOpenClose('')"><img id="bajaIcon" class="desktopFileIcons" style="left: 10%; top:15%;" src="src/desktopFiles/baja.svg"></button>
-        <button onclick="toggleOpenClose()"><img id="menuIcon" class="desktopFileIcons" style="left: 20%; top:40%;" src="src/desktopFiles/menu.svg"></button>
-        <button onclick="toggleOpenClose()"><img id="renuIcon" class="desktopFileIcons" style="left: 60%; top:60%;" src="src/desktopFiles/renu.svg"></button>
-        <button onclick="toggleOpenClose()"><img id="trafficIcon" class="desktopFileIcons" style="left:35% ; top:65%;" src="src/desktopFiles/traffic.svg"></button>
-        <button onclick="toggleOpenClose()"><img id="civicoIcon" class="desktopFileIcons" style="left: 50%; top:10%;" src="src/desktopFiles/civico.svg"></button>
-                <!-- <img id="summitplanIcon" class="desktopFileIcons" style="left: 80%; top:45%;" src="../src/desktopFiles/summitplan.svg">
-                <img id="muccaIcon" class="desktopFileIcons" style="left: 80%; top:15%;" src="../src/desktopFiles/mucca.svg">
-                <img id="symphonyIcon" class="desktopFileIcons" style="left: 60%; top:35%;" src="../src/desktopFiles/symphony.svg">
-                <img id="symphonyIcon" class="desktopFileIcons" style="left: 10%; top:55%;" src="../src/desktopFiles/killanilla.svg"> -->
+        <button onclick="toggleOpenClose('miller_project')"><img style="left: 80%; top:15%;" src="src/desktopFiles/millerbrosfile.svg"></button>
+        <button onclick="toggleOpenClose('')"><img style="left: 10%; top:15%;" src="src/desktopFiles/baja.svg"></button>
+        <button onclick="toggleOpenClose()"><img style="left: 20%; top:40%;" src="src/desktopFiles/menu.svg"></button>
+        <button onclick="toggleOpenClose()"><img style="left: 60%; top:60%;" src="src/desktopFiles/renu.svg"></button>
+        <button onclick="toggleOpenClose()"><img style="left:35% ; top:65%;" src="src/desktopFiles/traffic.svg"></button>
+        <button onclick="toggleOpenClose()"><img  style="left: 50%; top:10%;" src="src/desktopFiles/civico.svg"></button>
+                
               </div>
 
     <div class="desktop_toolbar">
@@ -327,7 +245,7 @@ button:hover {cursor: pointer;}
         <a href="https://www.instagram.com/meganbyers.jpeg/" target="_blank"><img src="src/instagram_file.svg"></a>
         <a href="https://www.linkedin.com/in/meganraebyers/" target="_blank"><img src="src/linkedin_file.svg"></a>
         <a href="https://github.com/coloradical" target="_blank"><img src="src/github_file.svg"></a><br>
-        <div id="contact_window_sendbar"><button><a target="_blank" href="mailto:megan@designelixir.studio">Send</a></button></div>
+        <div id="contact_window_sendbar"><button><a target="_blank" href="mailto:megan@designelixir.studio">Send a Message</a></button></div>
     </div>
     </div>
 
@@ -383,6 +301,7 @@ button:hover {cursor: pointer;}
                   <p> Click to view a project case.  </p>
                   <div id="finder_window_col2_recents" > 
                     <img src="src/desktopFiles/baja.svg">
+                    <a onclick="toggleOpenClose('miller_project'), toggleOpenClose('finder_window')"></a><img src="src/desktopFiles/millerbrosfile.svg"></a>
                     <img src="src/desktopFiles/brut.svg">
                     <img src="src/desktopFiles/menu.svg">
                     <img src="src/desktopFiles/renu.svg">
