--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 
     <!-- Begin Desktop  -->
        <div class="desktop">
-         <p> big bobs</p>
+         <p> big boooooooos</p>
         </div>
 
         <!-- End Dock -->
