--- a/index.html
+++ b/index.html
@@ -265,19 +265,26 @@
           <div class="window_closebar"><button onclick="toggleOpenClose('testimonial_window1')"><img class="close_btn" src="src/close.svg"></button><p>Testimonial - Miller Bros</p></div>
             
               <div class="sticky_textbox">
-                  <h5><em>Megan was a joy to work with! She truly brought our vision to life and helped us design logos, stickers, and apparel that have revolutionized our brand. She was very engaged and involved throughout the entire process, and helped us cultivate our vision to a place that surpassed the ideas we brought to the table.</em> </h5>
-                  <button onclick="toggleOpenClose('miller_project')">View Project Case</button>
+                  <br><h5><em>Megan was a joy to work with! She truly brought our vision to life and helped us design logos, stickers, and apparel that have revolutionized our brand. She was very engaged and involved throughout the entire process, and helped us cultivate our vision to a place that surpassed the ideas we brought to the table.</em> </h5>
               </div>
       </div>
   
       <div id="testimonial_window2" class="window sticky" style="display: none;">
           <div class="window_closebar"><button onclick="toggleOpenClose('testimonial_window2')"><img class="close_btn" src="src/close.svg"></button><p>Testimonial - Debra Austin</p></div>
-              <p> big ASS TITTIES!!!!!!!!!!! 
+             <br> <h5> <em>Megan was again extremely responsive in listening to my objectives and
+                  redesigning that page in my site. I recommend Megan as a creative, collaborative, and
+                  professional young web designer and I’m so delighted with both my website and the technical
+                  capacity I gained by working with Megan.</em> </h5><br><br>
       </div>
   
       <div id="testimonial_window3" class="window sticky" style="display: none;">
           <div class="window_closebar"><button onclick="toggleOpenClose('testimonial_window3')"><img class="close_btn" src="src/close.svg"></button><p>Testimonial - Bob Mathes</p></div>
-              <p> big ASS TITTIES!!!!!!!!!!! 
+             <br><h5> <em>Megan has been a great asset to my small business by helping us transition away 
+                from an out-of-date website and social media we inherited from former owners.  
+                From great concept and design, tech fixes and consulting, art, photography, and helping 
+                get an online shopping platform built. I’ve never seen someone be so engaged and work so 
+                hard, and recommend her for any sized project! </em>  </h5>
+
       </div>
   
       <div id="miller_project" class="window case" style="display: none;">
@@ -298,7 +305,8 @@
                   </div>
         
                   <div class="artboard_center">
-                    <p>Lorem ipsum dolor sit amet, vix no novum legere adversarium, ea mel ludus graece eleifend. Atqui eligendi reformidans id est, id modo alterum euripidis sit. Eam ei ullum maluisset. Epicuri assentior sit ex, eos ex delenit dolorem recteque.</p>
+                    <br>
+                   <img src="jpgs/miller_project/miller_poster.png">
                     </div>
                 </div>
   
