--- a/index.html
+++ b/index.html
@@ -1,19 +1,18 @@
-<html>
-  <head>
-    <title>Design Elixir</title>
-    <meta charset="utf-8">
-    <script src="https://raw.githubusercontent.com/mrdoob/three.js/master/src/loaders/LoadingManager.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/91/three.js"></script>
-    <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
-    <script src="https://cdn.rawgit.com/mrdoob/three.js/r68/examples/js/loaders/SVGLoader.js"></script>
-    <script src="https://raw.githubusercontent.com/mrdoob/three.js/master/examples/js/renderers/SVGRenderer.js"></script>
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,300;0,400;0,500;0,600;1,300;1,400;1,500;1,600&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="https://use.typekit.net/rkj0ohr.css">
+<!DOCTYPE html>
+<html lang="en">
+    <head>
+      <title>Design Elixir</title>
+      <meta charset="utf-8">
+      <script src="https://raw.githubusercontent.com/mrdoob/three.js/master/src/loaders/LoadingManager.js"></script>
+      <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/91/three.js"></script>
+      <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
+      <script src="https://cdn.rawgit.com/mrdoob/three.js/r68/examples/js/loaders/SVGLoader.js"></script>
+      <script src="https://raw.githubusercontent.com/mrdoob/three.js/master/examples/js/renderers/SVGRenderer.js"></script>
+      <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,300;0,400;0,500;0,600;1,300;1,400;1,500;1,600&display=swap" rel="stylesheet">
+      <link rel="stylesheet" href="https://use.typekit.net/rkj0ohr.css"> 
+      <link rel="stylesheet" type="text/css" href="css/index.css" />
 
-
-    <link rel="stylesheet" type="text/css" href="css/index.css" />
-
-  </head>
+    </head>
     <body>
       <canvas id="viewport" width="100%" height="100%"></canvas> 
         <div class="page-wrapper" >
