--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
                   <div class="scroll" id="scroller_container">
                       <div id="slide_1" class="about_slide">
                               <h6><a onclick="scrollRight_scroller(1)"><strong style="float:right;">OUR MISSION &rsaquo;</strong></a> </h6><br><br>
-                              <img src="jpgs/IMG_8290.JPG"> 
+                              <img src="src/IMG_8290.JPG"> 
                                   <h1>Design Elixir houses the creative mind of Megan Byers and her quest to create media with brilliant character and deliberate user-experience.</h1>
                                   
                                   <p class="blu">I’m an all-in-one creative consultant, specializing in web development, graphic design and illustration. I believe great things come from great connections, and serving small businesses and entrepreneurs enables powerful relationships rooted in a collective, passionate vision. Through websites, logos, typography, posters, branding materials and any other client-related needs, I create work structured with practical user experience and fabricated with a flair of character. 
@@ -149,7 +149,7 @@
                       </div>  
                       <div id="slide_3" class="about_slide">
                               <h6 style="float: left;"><strong><a onclick="scrollRight_scroller(0)">&lsaquo; OUR MISSION</a></strong> </h6>
-                              <img src="jpgs/decorated_portrait.jpg"> 
+                              <img src="src/decorated_portrait.jpg"> 
                                   <h1>A lil' something about Megan:</h1>
                                   
                                   <p class="blu"> 
