add expires header script

--- a/index.html
+++ b/index.html
@@ -6,11 +6,13 @@
       <meta http-equiv="last-modified" content="Sat, 30 May 2020 04:16:46 MST " />
       <meta http-equiv="cache-control" content="Private" />
       <meta http-equiv="Expires" content="600" />
+      
       <script src="https://raw.githubusercontent.com/mrdoob/three.js/master/src/loaders/LoadingManager.js"></script>
       <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/91/three.js"></script>
       <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
       <script src="https://cdn.rawgit.com/mrdoob/three.js/r68/examples/js/loaders/SVGLoader.js"></script>
       <script src="https://raw.githubusercontent.com/mrdoob/three.js/master/examples/js/renderers/SVGRenderer.js"></script>
+      <script src="https://gist.github.com/tomkao/1229382.js"></script>
       <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,300;0,400;0,500;0,600;1,300;1,400;1,500;1,600&display=swap" rel="stylesheet">
       <link rel="stylesheet" href="https://use.typekit.net/rkj0ohr.css"> 
       <link rel="stylesheet" type="text/css" href="css/index.css" />
@@ -319,7 +321,7 @@
 
           <div class="artboard">
             <div class="artboard_center">
-              <img width=54%; src="src/cases/miller_bros/lars_sketches.jpeg">
+              <img width=54%; src="src/cases/miller_bros/lars_sketches.jpg">
               <img width=40%; src="src/cases/miller_bros/miller_diamond_stickers.gif">
               <img width=97%; src="src/cases/miller_bros/miller_sticker_layout.png">
 
