working on .htaccess

--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
       <meta http-equiv="cache-control" content="Private" />
       <meta http-equiv="Expires" content="600" /> -->
       
-      <script src="https://raw.githubusercontent.com/mrdoob/three.js/master/src/loaders/LoadingManager.js"></script>
-      <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/91/three.js"></script>
+      <script type="text/plain" src="https://raw.githubusercontent.com/mrdoob/three.js/master/src/loaders/LoadingManager.js"></script>
+      <script type="text/plain" src="https://cdnjs.cloudflare.com/ajax/libs/three.js/91/three.js"></script>
       <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
-      <script src="https://cdn.rawgit.com/mrdoob/three.js/r68/examples/js/loaders/SVGLoader.js"></script>
-      <script src="https://raw.githubusercontent.com/mrdoob/three.js/master/examples/js/renderers/SVGRenderer.js"></script>
+      <script type="text/html" src="https://cdn.rawgit.com/mrdoob/three.js/r68/examples/js/loaders/SVGLoader.js"></script>
+      <script type="text/html" src="https://raw.githubusercontent.com/mrdoob/three.js/master/examples/js/renderers/SVGRenderer.js"></script>
       <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,300;0,400;0,500;0,600;1,300;1,400;1,500;1,600&display=swap" rel="stylesheet">
       <link rel="stylesheet" href="https://use.typekit.net/rkj0ohr.css"> 
       <link rel="stylesheet" type="text/css" href="css/index.css" />
