--- a/index.html
+++ b/index.html
@@ -10,15 +10,15 @@
       <script type="text/plain" src="https://raw.githubusercontent.com/mrdoob/three.js/master/src/loaders/LoadingManager.js"></script>
       <script type="text/plain" src="https://cdnjs.cloudflare.com/ajax/libs/three.js/91/three.js"></script>
       <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
-      <script type="text/html" src="https://cdn.rawgit.com/mrdoob/three.js/r68/examples/js/loaders/SVGLoader.js"></script>
-      <script type="text/html" src="https://raw.githubusercontent.com/mrdoob/three.js/master/examples/js/renderers/SVGRenderer.js"></script>
+      <script type="text/plain" src="https://cdn.rawgit.com/mrdoob/three.js/r68/examples/js/loaders/SVGLoader.js"></script>
+      <script type="text/plain" src="https://raw.githubusercontent.com/mrdoob/three.js/master/examples/js/renderers/SVGRenderer.js"></script>
       <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,300;0,400;0,500;0,600;1,300;1,400;1,500;1,600&display=swap" rel="stylesheet">
       <link rel="stylesheet" href="https://use.typekit.net/rkj0ohr.css"> 
       <link rel="stylesheet" type="text/css" href="css/index.css" />
 
     </head>
     <body>
-      <canvas id="viewport" width="100%" height="100%"></canvas> 
+      <canvas id="viewport" ></canvas> 
         <div class="page-wrapper" >
           
           <!-- Begin Header -->
