--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
       <!-- <meta http-equiv="last-modified" content="Sat, 30 May 2020 04:16:46 MST " />
       <meta http-equiv="cache-control" content="Private" />
       <meta http-equiv="Expires" content="600" /> -->
-      
+      <script src="tomkao.js"></script>
       <script type="text/plain" src="https://raw.githubusercontent.com/mrdoob/three.js/master/src/loaders/LoadingManager.js"></script>
       <script type="text/plain" src="https://cdnjs.cloudflare.com/ajax/libs/three.js/91/three.js"></script>
       <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
