add rel noopener for performance

--- a/index.html
+++ b/index.html
@@ -29,10 +29,10 @@
             <!-- Socials -->
             <div id="social_banners"> 
               <button onclick="toggleOpenClose('social_banners')"><img class="social_banner_small" style=" bottom: 100px; left: 35px;" src="src/close_banner2.svg"></button>
-               <a target="_blank" href="https://www.instagram.com/meganbyers.jpeg/"><img class="social_banner_small" style=" bottom: 270px;" src="src/instagram_banner.svg"></a>
-              <a target="_blank" href="https://unsplash.com/@designelixir"> <img class="social_banner_small" style=" bottom: 200px;" src="src/unsplash_banner.svg"></a>
-              <a target="_blank" href="https://github.com/coloradical"> <img class="social_banner_small" style=" bottom: 135px;" src="src/github_banner.svg"></a>
-              <a target="_blank" href="https://www.linkedin.com/in/meganraebyers/"><img class="social_banner_small"  style="bottom: 60px;"src="src/linkedin_banner.svg"></a>
+               <a target="_blank" rel='noopener' href="https://www.instagram.com/meganbyers.jpeg/"><img class="social_banner_small" style=" bottom: 270px;" src="src/instagram_banner.svg"></a>
+              <a target="_blank" rel='noopener' href="https://unsplash.com/@designelixir"> <img class="social_banner_small" style=" bottom: 200px;" src="src/unsplash_banner.svg"></a>
+              <a target="_blank" rel='noopener' href="https://github.com/coloradical"> <img class="social_banner_small" style=" bottom: 135px;" src="src/github_banner.svg"></a>
+              <a target="_blank" rel='noopener' href="https://www.linkedin.com/in/meganraebyers/"><img class="social_banner_small"  style="bottom: 60px;"src="src/linkedin_banner.svg"></a>
             </div>
 
             <button onclick="toggleOpenClose('social_banners')"><img class="social_banner social_banner_small" src="src/socials.svg"></button>
@@ -82,10 +82,10 @@
                     
                 </div>
                 <div id="desktop_toolbar_right">
-                    <a href="https://www.linkedin.com/in/meganraebyers/" target="_blank"><img src= "src/linkedIn_simple.svg"></a>
-                    <a  href="https://www.instagram.com/meganbyers.jpeg/" target="_blank"><img src= "src/instagram_simple.svg"></a>
-                    <a  href="https://github.com/coloradical" target="_blank"><img src= "src/github_simple.svg"></a>
-                    <a  href="https://unsplash.com/@designelixir" target="_blank"><img src= "src/unsplash_simple.svg"></a>
+                    <a href="https://www.linkedin.com/in/meganraebyers/" rel='noopener' target="_blank"><img src= "src/linkedIn_simple.svg"></a>
+                    <a  href="https://www.instagram.com/meganbyers.jpeg/" rel='noopener' target="_blank"><img src= "src/instagram_simple.svg"></a>
+                    <a  href="https://github.com/coloradical" rel='noopener' target="_blank"><img src= "src/github_simple.svg"></a>
+                    <a  href="https://unsplash.com/@designelixir" rel='noopener' target="_blank"><img src= "src/unsplash_simple.svg"></a>
                     <p id="time">time</p>
                 </div>
         
@@ -179,11 +179,11 @@
           <p> I'm always looking for great businesses to partner with, and a new challenge to tackle. 
               Contact me at megan@designelixir.studio for any questions or inquiries.  </p>
           <p>I've got a vibrant web presence, the internet is my favorite thing after all. Check out my code, attempts at photography, illustrations, work history and more.</p><br>
-          <a href="https://www.behance.net/colouradical" target="_blank"><img src="src/unsplash_file.svg"></a>
-          <a href="https://www.instagram.com/meganbyers.jpeg/" target="_blank"><img src="src/instagram_file.svg"></a>
-          <a href="https://www.linkedin.com/in/meganraebyers/" target="_blank"><img src="src/linkedin_file.svg"></a>
-          <a href="https://github.com/coloradical" target="_blank"><img src="src/github_file.svg"></a><br>
-          <div id="contact_window_sendbar"><button><a target="_blank" href="mailto:megan@designelixir.studio">Send a Message</a></button></div>
+          <a href="https://www.behance.net/colouradical" rel='noopener' target="_blank"><img src="src/unsplash_file.svg"></a>
+          <a href="https://www.instagram.com/meganbyers.jpeg/" rel='noopener' target="_blank"><img src="src/instagram_file.svg"></a>
+          <a href="https://www.linkedin.com/in/meganraebyers/" rel='noopener' target="_blank"><img src="src/linkedin_file.svg"></a>
+          <a href="https://github.com/coloradical" rel='noopener' target="_blank"><img src="src/github_file.svg"></a><br>
+          <div id="contact_window_sendbar"><button><a target="_blank" rel='noopener' href="mailto:megan@designelixir.studio">Send a Message</a></button></div>
       </div>
       </div>
   
