--- a/index.html
+++ b/index.html
@@ -89,10 +89,10 @@
                     
                 </div>
                 <div id="desktop_toolbar_right">
-                    <a href="https://www.linkedin.com/in/meganraebyers/" rel='noopener' target="_blank"><img src= "src/linkedIn_simple.svg"></a>
-                    <a  href="https://www.instagram.com/meganbyers.jpeg/" rel='noopener' target="_blank"><img src= "src/instagram_simple.svg"></a>
-                    <a  href="https://github.com/coloradical" rel='noopener' target="_blank"><img src= "src/github_simple.svg"></a>
-                    <a  href="https://unsplash.com/@designelixir" rel='noopener' target="_blank"><img src= "src/unsplash_simple.svg"></a>
+                    <a href="https://www.linkedin.com/in/meganraebyers/" rel='noopener' target="_blank" aria-label="Open Megan's LinkedIn"><img src= "src/linkedIn_simple.svg"></a>
+                    <a  href="https://www.instagram.com/meganbyers.jpeg/" rel='noopener' target="_blank" aria-label="Open Megan's Instagram"><img src= "src/instagram_simple.svg"></a>
+                    <a  href="https://github.com/coloradical" rel='noopener' target="_blank" aria-label="Open Megan's Github"><img src= "src/github_simple.svg"></a>
+                    <a  href="https://unsplash.com/@designelixir" rel='noopener' target="_blank" aria-label="Open Megan's Unsplash"><img src= "src/unsplash_simple.svg"></a>
                     <p id="time">time</p>
                 </div>
         
