--- a/index.html
+++ b/index.html
@@ -318,21 +318,21 @@
                 </div>
 
                 <div class="artboard_right">
-                  <img style="margin-top: 25px" src="src/cases/miller_bros/cam_spence.png">
+                  <!-- <img style="margin-top: 25px" src="src/cases/miller_bros/cam_spence.png"> -->
                   <p class="caption">Camden and Spencer sit in their 1983 Volkswagen Westfalia, "Lars". </p>
                 </div>
           </div>
 
           <div class="artboard">
             <div class="artboard_center">
-              <img width=54%; src="src/cases/miller_bros/lars_sketches.jpg">
-              <img width=40%; src="src/cases/miller_bros/miller_diamond_stickers.gif">
-              <img width=97%; src="src/cases/miller_bros/miller_sticker_layout.png">
+              <!-- <img width=54%; src="src/cases/miller_bros/lars_sketches.jpg"> -->
+              <!-- <img width=40%; src="src/cases/miller_bros/miller_diamond_stickers.gif"> -->
+              <!-- <img width=97%; src="src/cases/miller_bros/miller_sticker_layout.png"> -->
 
             </div>
 
             <div class="artboard_even_left" width=50%;>
-              <img width=100%; src="src/cases/miller_bros/miller_imac_closeup.jpg">
+              <!-- <img width=100%; src="src/cases/miller_bros/miller_imac_closeup.jpg"> -->
             </div>
 
             <div class="artboard_even_right">
