fix stylesheet bug

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
      
       <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,300;0,400;0,500;0,600;1,300;1,400;1,500;1,600&display=swap" type="text/css" rel="stylesheet">
       <link type="text/css" rel="stylesheet" href="https://use.typekit.net/rkj0ohr.css"> 
-      <link rel="preload" href="css/index.css" as="style" type="text/css"/>
+      <link rel="stylesheet" href="css/index.css" type="text/css"/>
 
     </head>
     <body>
