--- a/index.html
+++ b/index.html
@@ -317,14 +317,14 @@
 
           <div class="artboard">
             <div class="artboard_center">
-              <img width="54%"; src="src/cases/miller_bros/lars_sketches.jpg" alt="Sketches of Lars, the VW Westfalia">
-              <img width="40%"; src="src/cases/miller_bros/miller_diamond_stickers.gif" alt="Variations of one sticker design">
-              <img width="97%"; src="src/cases/miller_bros/miller_sticker_layout.png" alt="All Stickers">
+              <img style="width: 54%" src="src/cases/miller_bros/lars_sketches.jpg" alt="Sketches of Lars, the VW Westfalia">
+              <img style="width: 40%" src="src/cases/miller_bros/miller_diamond_stickers.gif" alt="Variations of one sticker design">
+              <img style="width: 97%" src="src/cases/miller_bros/miller_sticker_layout.png" alt="All Stickers">
 
             </div>
 
             <div class="artboard_even_left">
-              <img width="100%"; src="src/cases/miller_bros/miller_imac_closeup.jpg" alt='miller bros logo on their website'>
+              <img style="width: 100%;" src="src/cases/miller_bros/miller_imac_closeup.jpg" alt='miller bros logo on their website'>
             </div>
 
             <div class="artboard_even_right">
@@ -428,7 +428,7 @@
                 <div class="window_closebar"><button onclick="toggleOpenClose('killa_nilla_project')"><img class="close_btn" src="src/close.svg" alt="close button"></button><p>Killa Nilla - Album Artwork</p></div>
                 
                 <div class="case_content">
-                    <div class="artboard" id="bajaArtboard">
+                    <div class="artboard">
                         <div class="artboard_left">
                           <h1>Killa Nilla </h1>
                           <p style="font-size: 18px;"><em>April '19</em></p>
@@ -454,7 +454,7 @@
                   <div class="window_closebar"><button onclick="toggleOpenClose('tlgs_project')"><img class="close_btn" src="src/close.svg" alt="close button"></button><p>Twin Lakes General Store - Website Design and Development</p></div>
                   
                   <div class="case_content">
-                      <div class="artboard" id="bajaArtboard">
+                      <div class="artboard">
                           <div class="artboard_left">
                             <h1>Twin Lakes General Store </h1>
                             <p style="font-size: 18px;"><em>February '20</em></p>
