--- a/scratch.html
+++ b/scratch.html
@@ -15,40 +15,34 @@
 .artboard_column {float: left; width: 48%;  margin-right: 10px;}
 
 
+
 </style>
 
 <div class="case_content">
     <div class="artboard">
         <div>
-            <h1> Boulder Baja </h1>
-            <h2> Design a logo that aligns with the mission of University of Colorado’s Baja Racing Team.</h2>	
+            <h1> Killa Nilla </h1>
+            <h2> Design abstract and psychedelic album covers to match the kaleidoscopic sounds of dubstep music created by artist Max Antoine (Killa Nilla). </h2>	
         </div>
         <div>
-            <p class="artboard_date">April '19</p>
+            <p class="artboard_date">June '19</p>
             <p class="blu"><b>Services:</b> Illustration <br>
-                <b>Deliverables:</b> Logo<br><br>
-                Assigned with the task of building an off-road vehicle to compete in the Society of Automotive Engineers (SAE) Baja competition, the University of Colorado’s racing team aspired to stand out with a custom logo to embellish their finished car and team gear. Pulling inspiration from sports team logos and racing culture, the logo represents the school’s mascot (the Buffs) while utilizing the rough and tough nature of off-road racing. The logo was designed as a vector and was later embroidered onto hats and shirts. 
+                <b>Deliverables:</b> Album Artworks<br><br>
+                Given complete creative freedom, I developed two album artworks for electronic artist “Killa Nilla”. Driven by the hypnotic and space-inspired culture of the dubstep, I created album covers based on the titles of the singles, “Traffic” and “Love Me Now”. The albums both feature bold contrast between subject and background and bright colors to parallel the nature and aesthetic of electronic music. 
             </p>
         </div>
-        <div>
-            <img style="margin: 25px 0px 50px 0px; width: 96%;" src="src/cases/boulder_baja/tri-color_logo.svg" loading="lazy" alt="Camden and Spencer Miller with their Volkswagen Westfalia">
-        </div>
-        <div class="artboard_column">
-                <img style="width: 100%; " src="src/cases/boulder_baja/girl_baja.jpg" loading="lazy" alt="Girl sits in off-road vehicle with Logo t-shirt">
-        </div>
-        <div class="artboard_column">
-                <img style="width: 100%;" src="src/cases/boulder_baja/racer_baja.jpg" loading="lazy" alt="baja team poses in front of their off-road vehicle">
-        </div>
 
-        <img style="width: 97%;" src="src/cases/boulder_baja/baja_banner.jpg" loading="lazy" alt="Girl sits in off-road vehicle with Logo t-shirt">
-    
         <div class="artboard_column">
-                <img style="width: 100%;" src="src/cases/boulder_baja/group_photo_baja.jpg" loading="lazy" alt="team photo with off-road vehicle">
-                <p class="caption">The BAJA team poses with their off-road vehicle, embellished with a new shiny logo.</p><br> <br> 
+                <img style="width: 100%;" src="src/cases/killa_nilla/max_album_traffic_v1_medium_res.jpg" loading="lazy" alt="team photo with off-road vehicle">
         </div>
         <div class="artboard_column">
-                <img style="width: 100%; margin-bottom: 50px;" src="src/cases/boulder_baja/baja_hat.jpg" loading="lazy" alt="hat with baja logo">
+                <img style="width: 100%; " src="src/cases/killa_nilla/love_me_now.svg" loading="lazy" alt="hat with baja logo">
         </div>
+        <img src="src/cases/killa_nilla/traffic_closeup copy.jpg" style="width: 60%;">
+            <img src="src/cases/killa_nilla/phone_love_me_now.jpg" style="width: 33%;">
+
+        <p style="text-align: center">Find Killa Nilla's tracks <i>Love Me Now</i> and <i>Traffic on his <a target="_blank" rel="noopener" href="https://open.spotify.com/artist/56fkl9znFBq2U82hEWyZNR?si=I10aXE5hQcaKEZ83_zsy4w">Spotify page.</a></i></p>
+        
     </div>
 
 </div>
