add illustration splash

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                 <img id="splash_context_text" src="src/splash+contexts/splash_context.svg" alt="What I can Offer you">
                 
                   <img class="splash_img" id="web_development_splash" src="src/splash+contexts/webDevelopment_splash.svg" alt="Web Development: From graphic design to web development and launch, Design Elixir is your one-stop shop for tailored and unique websites with functionality across all platforms. Services include: HTML/CSS/Javascript, Custom Wordpress Themes, Page Design, Development, E-Commerce">
-                  <img class="splash_img" id="graphic_design_splash" src="src/splash+contexts/webDevelopment_splash.svg" style="transform: rotate(180deg);" alt="to be filled in">
+                  <img class="splash_img" id="graphic_design_splash" src="src/splash+contexts/illustration_splash.svg" alt="to be filled in">
                   <!-- <img class="splash_img" id="web_development_splash" src="src/webDevelopment_splash.svg"> -->
           
                 </div>      
