--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
       <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>      
       <script src="https://cdn.rawgit.com/mrdoob/three.js/r68/examples/js/loaders/SVGLoader.js"></script>
       <script src="https://raw.githubusercontent.com/mrdoob/three.js/master/examples/js/renderers/SVGRenderer.js"></script>
-     
+      <link type="text/css" rel="stylesheet" href="css/index.css"> 
+
       <link rel="shortcut icon" type="image/png" href="src/favicon.png">
       <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,300;0,400;0,500;0,600;1,300;1,400;1,500;1,600&display=swap" type="text/css" rel="stylesheet">
       <link type="text/css" rel="stylesheet" href="https://use.typekit.net/rkj0ohr.css"> 
