--- a/urghhh.html
+++ b/urghhh.html
@@ -1,181 +1,80 @@
-<!DOCTYPE html>
-<html>
-<head>
-<meta name="viewport" content="width=device-width, initial-scale=1">
 <style>
-* {
-  box-sizing: border-box;
+
+#finder_wrapper {width: 100%; height: 100%; background: red; content: contain; }
+
+#finder_filter_toolbar {
+    width: 100%; 
+    height: 100px; 
+    background: #707BA5;
+    border: 1px solid #2f335c;
+    display: flex; 
+    justify-content: center;
+    align-items: center;
 }
 
-body {
-  background-color: #f1f1f1;
-  padding: 20px;
-  font-family: Arial;
-}
+#finder_showcase { background: teal; width: 100%; height: 70%; top: 50px; position: relative; vertical-align: middle; overflow-x: scroll;  display: flex; align-items: center; justify-content: center;}
+.slide {background: green; width: 90%; height: 100%; content: contain; }
+.slide_caption {text-align: center;}
+.slideshow_btn {float: left; }
 
-/* Center website */
-.main {
-  max-width: 1000px;
-  margin: auto;
-}
+#finder_slideshow {width: 100%; height: 100px; border-top: 1px solid #2f335c; background: #707BA5; position: fixed; bottom: 0; display: flex; align-items: center;}
+.hide {display: none;}
 
-h1 {
-  font-size: 50px;
-  word-break: break-all;
-}
 
-.row {
-  margin: 10px -16px;
-}
-
-/* Add padding BETWEEN each column */
-.row,
-.row > .column {
-  padding: 8px;
-}
-
-/* Create three equal columns that floats next to each other */
-.column {
-  float: left;
-  width: 100%;
-  display: none; /* Hide all elements by default */
-}
-
-/* Clear floats after rows */ 
-.row:after {
-  content: "";
-  display: table;
-  clear: both;
-}
-
-/* Content */
-.content {
-  background-color: white;
-  padding: 10px;
-}
-
-/* The "show" class is added to the filtered elements */
-.show {
-  display: block;
-}
-
-/* Style the buttons */
-.btn {
-  border: none;
-  outline: none;
-  padding: 12px 16px;
-  background-color: white;
-  cursor: pointer;
-}
-
-.btn:hover {
-  background-color: #ddd;
-}
-
-.btn.active {
-  background-color: #666;
-  color: white;
-}
 </style>
-</head>
-<body>
-
-<!-- MAIN (Center website) -->
-<div class="main">
+<div id="finder_wrapper">
 
 
-<div id="myBtnContainer">
-  <button class="btn active" onclick="filterSelection('all')"> Show all</button>
-  <button class="btn" onclick="filterSelection('nature')"> Nature</button>
-  <button class="btn" onclick="filterSelection('cars')"> Cars</button>
-  <button class="btn" onclick="filterSelection('people')"> People</button>
+
+<div id="finder_filter_toolbar">
+
+<button>All</button>
+<button>Websites</button>
+<button>Graphic Design</button>
+<button>Illustrations</button>
+
 </div>
 
-<!-- Portfolio Gallery Grid -->
-<div class="row">
-  <div class="column nature">
-    <div class="content">
-      <img  src="src/cases/tlgs/ipad_tlgs.jpg" alt="Mountains" style="width:100%">
+<div id="finder_showcase">
+    <button class="slideshow_btn" style="float: left;">left</button>
+    <div class="slide miller_slide">
+            <img class="wide_slide" src="src/cases/miller_bros/miller_sticker_layout.png" style="width: 100%;" loading="lazy" alt="Miller Bros Sticker layout">
+            <div class="slide_caption">
+                    <p><b>The Miller Bros</b></p>                                  
+                    <p>Design a unique, eye-catching logo and stickers to compliment the adventures of two brothers and their Volkswagen Westfalia.</p>	
+                    <button onclick="toggleOpenClose('miller_project')">View Full Project</button>
+                </div>
     </div>
-  </div>
-  <div class="column nature">
-    <div class="content">
-    <img src="src/cases/miller_bros/miller_sticker_layout.png" alt="Lights" style="width:100%">
-    </div>
-  </div>
-  <div class="column nature">
-    <div class="content">
-    <img src="src/cases/tlgs/ipad_tlgs.jpg" alt="Nature" style="width:100%">
-    </div>
-  </div>
-  
-  <div class="column cars">
-    <div class="content">
-      <img src="src/cases/finder_extras/kats_script2.jpg" alt="Car" style="width:100%">
-    </div>
-  </div>
-  <div class="column cars">
-    <div class="content">
-    <img src="src/cases/vans/vans_post_v2.webp" alt="Car" style="width:100%">
-    </div>
-  </div>
-  <div class="column cars">
-    <div class="content">
-    <img src="src/cases/killa_nilla/phone_love_me_now.jpg" alt="Car" style="width:100%">
-    </div>
-  </div>
 
-<!-- END GRID -->
+    <div class="slide tlgs_slide hide">
+            <img class="wide_slide" src="src/cases/tlgs/ipad_tlgs.jpg" style="width: 100%;" loading="lazy" alt="Miller Bros Sticker layout">
+            <div class="slide_caption">
+                    <p><b>Twin Lakes General Store</b></p>
+                    <p> Revamp the website for a historic, 141-year old mountain general store with straightforward layout and information  while expressing the character of the Twin Lakes, Colorado. </p>
+                    <button onclick="toggleOpenClose('tlgs_project')">View Full Project</button>
+                </div>
+    </div>
+
+    <button class="slideshow_btn" style="float: right;">right</button>
 </div>
 
-<!-- END MAIN -->
+<div id="finder_slideshow">
+    <button class="miller_slide">MILLER PROJECT</button>
+
+</div>
+
+
+
+
+
+
+
+
 </div>
 
 <script>
-filterSelection("all")
-function filterSelection(c) {
-  var x, i;
-  x = document.getElementsByClassName("column");
-  if (c == "all") c = "";
-  for (i = 0; i < x.length; i++) {
-    w3RemoveClass(x[i], "show");
-    if (x[i].className.indexOf(c) > -1) w3AddClass(x[i], "show");
-  }
-}
-
-function w3AddClass(element, name) {
-  var i, arr1, arr2;
-  arr1 = element.className.split(" ");
-  arr2 = name.split(" ");
-  for (i = 0; i < arr2.length; i++) {
-    if (arr1.indexOf(arr2[i]) == -1) {element.className += " " + arr2[i];}
-  }
-}
-
-function w3RemoveClass(element, name) {
-  var i, arr1, arr2;
-  arr1 = element.className.split(" ");
-  arr2 = name.split(" ");
-  for (i = 0; i < arr2.length; i++) {
-    while (arr1.indexOf(arr2[i]) > -1) {
-      arr1.splice(arr1.indexOf(arr2[i]), 1);     
-    }
-  }
-  element.className = arr1.join(" ");
-}
 
 
-// Add active class to the current button (highlight it)
-var btnContainer = document.getElementById("myBtnContainer");
-var btns = btnContainer.getElementsByClassName("btn");
-for (var i = 0; i < btns.length; i++) {
-  btns[i].addEventListener("click", function(){
-    var current = document.getElementsByClassName("active");
-    current[0].className = current[0].className.replace(" active", "");
-    this.className += " active";
-  });
-}
+
+
 </script>
-
-</body>
-</html>
