styling and user experience work

--- a/error.html
+++ b/error.html
@@ -1,1 +1,17 @@
-<h1>Sorry you suck!</h1>
+<style>
+body { background: #2f335c;}
+h1 {font-family: 'fatfrank', sans-serif, bold; font-size: 2rem; color: white; text-align: center;}
+a {font-family:'Poppins', sans-serif; font-size: 1.5rem; color: white; text-decoration: none; text-align: center;}
+a:hover {color: gray;}
+</style>
+
+<body>
+    <br><br>
+    <div style="text-align: center;">
+        <h1>Sorry, nothing here!</h1>
+        <a href="index.html">Design Elixir Home</a>
+
+    </div>
+    
+
+</body>
