--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
       <meta charset="utf-8">
       <meta name="viewport" content="width=device-width, initial-scale=1.0" />
       <meta name="description" content="Portfolio website for Design Elixir Studio out of Boulder, Colorado. Owned and operated by graphic designer, illustrator, and web developer Megan Rae Byers"/>
+      <meta name="theme-color" content="#2f335c">
+
 
 
       <link type="text/css" rel="stylesheet" href="css/index.css"> 
