clean up js and css

--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@
 
                    
             <div id="extras_window" class="window" style="display: none;">
-                    <div class="window_closebar"><button onclick="trashOpenClose('extras_window')" aria-label="toggle open/close"><img class="close_btn" src="src/close.svg" alt="close button"></button><p>Trash</p></div>
+                    <div class="window_closebar"><button onclick="toggleOpenClose('extras_window')" aria-label="toggle open/close"><img class="close_btn" src="src/close.svg" alt="close button"></button><p>Trash</p></div>
                     <div id="extras_window_content">
                         <button class="trash_icon" onclick="trashOpenClose('mia1'); onclick=trashOpenClose('mia2'); onclick=trashOpenClose('mia3');" style="bottom: 15%; left: 5%;"><img src="src/desktop_items/mia.svg" loading="lazy" style="width: 80px;" alt="Mia folder button" ></button>
                         <button class="trash_icon" onclick="trashOpenClose('terminal_window'); " style="top: 15%; right: 15%;"><img src="src/desktop_items/terminal.svg" style="width: 80px;" loading="lazy" alt="Website Stats Button"></button>
